[WIP] adding tsv output from SNAP
- append function doesn't do the change in place, so have to reassign output
- add helper function
- more conceptual playground

--- a/snap_playground.ipynb
+++ b/snap_playground.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,109 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_df = pd.DataFrame(columns=columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>study_id</th>\n",
-       "      <th>lab_id</th>\n",
-       "      <th>experimenter</th>\n",
-       "      <th>date</th>\n",
-       "      <th>condition</th>\n",
-       "      <th>maze</th>\n",
-       "      <th>phase</th>\n",
-       "      <th>trial</th>\n",
-       "      <th>sub_trial</th>\n",
-       "      <th>object</th>\n",
-       "      <th>movement_time</th>\n",
-       "      <th>average_velocity</th>\n",
-       "      <th>total_distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [study_id, lab_id, experimenter, date, condition, maze, phase, trial, sub_trial, object, movement_time, average_velocity, total_distance]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "global x\n",
-    "x = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -155,8 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "create_df()\n"
@@ -164,8 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def rando():\n",
@@ -174,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +126,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,100 +136,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "x = 4"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "def myfunc():\n",
-    "    global x\n",
-    "    x = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "myfunc()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
    "outputs": [],
    "source": [
     "subject_id_data = 2\n",
@@ -347,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +169,7 @@
        "'03/16/2018'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,29 +180,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_info = {\n",
-    "        'study_id': subject_id_data,\n",
-    "        'lab_id': '',\n",
-    "        'experimenter': experimenter_data,\n",
-    "        'date': cur_date,\n",
-    "        'condition': condition,\n",
-    "        'maze': maze_root,\n",
-    "        'phase': phase,\n",
-    "        'trial': trial_number,\n",
-    "        'movement_time': elapsed_time,\n",
-    "        'average_velocity': average_velocity,\n",
-    "        'total_distance': total_distance,\n",
-    "        'coordinates': resized_coordinate_array,\n",
-    "    }\n"
+    "def tstFunc():\n",
+    "    output_info = {\n",
+    "            'study_id': subject_id_data,\n",
+    "            'lab_id': '',\n",
+    "            'experimenter': experimenter_data,\n",
+    "            'date': cur_date,\n",
+    "            'condition': condition,\n",
+    "            'maze': maze_root,\n",
+    "            'phase': phase,\n",
+    "            'trial': trial_number,\n",
+    "            'movement_time': elapsed_time,\n",
+    "            'average_velocity': average_velocity,\n",
+    "            'total_distance': total_distance,\n",
+    "            'coordinates': resized_coordinate_array,\n",
+    "        }\n",
+    "    return mydf.append(output_info, ignore_index=True)\n",
+    "mydf = tstFunc()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +278,68 @@
        "0  [[0, 1, 2, 3]]  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "mydf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output_info = {\n",
+    "            'study_id': subject_id_data,\n",
+    "            'lab_id': '',\n",
+    "            'experimenter': experimenter_data,\n",
+    "            'date': cur_date,\n",
+    "            'condition': condition,\n",
+    "            'maze': maze_root,\n",
+    "            'phase': phase,\n",
+    "            'trial': trial_number,\n",
+    "            'movement_time': elapsed_time,\n",
+    "            'average_velocity': average_velocity,\n",
+    "            'total_distance': total_distance,\n",
+    "            'coordinates': resized_coordinate_array,\n",
+    "        }\n",
+    "def update_file(output_info, df):\n",
+    "    df = df.append(output_info, ignore_index=True)\n",
+    "update_file(output_info, mydf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mydf.append(output_info, ignore_index=True)\n",
+    "mydf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mydf.append(output_info, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydf"
    ]
   },
   {
